@@ -540,42 +540,42 @@ wxRendererNative_GetGeneric = wx._gdi.RendererNative_GetGeneric
 wxRendererNative_GetDefault = wx._gdi.RendererNative_GetDefault
 wxRendererNative_Set = wx._gdi.RendererNative_Set
 wxMaskColour = wx._gdi.MaskColour
-wxNORMAL_FONT = wx._gdi.NORMAL_FONT
-wxSMALL_FONT = wx._gdi.SMALL_FONT
-wxITALIC_FONT = wx._gdi.ITALIC_FONT
-wxSWISS_FONT = wx._gdi.SWISS_FONT
-wxRED_PEN = wx._gdi.RED_PEN
-wxCYAN_PEN = wx._gdi.CYAN_PEN
-wxGREEN_PEN = wx._gdi.GREEN_PEN
-wxBLACK_PEN = wx._gdi.BLACK_PEN
-wxWHITE_PEN = wx._gdi.WHITE_PEN
-wxTRANSPARENT_PEN = wx._gdi.TRANSPARENT_PEN
-wxBLACK_DASHED_PEN = wx._gdi.BLACK_DASHED_PEN
-wxGREY_PEN = wx._gdi.GREY_PEN
-wxMEDIUM_GREY_PEN = wx._gdi.MEDIUM_GREY_PEN
-wxLIGHT_GREY_PEN = wx._gdi.LIGHT_GREY_PEN
-wxBLUE_BRUSH = wx._gdi.BLUE_BRUSH
-wxGREEN_BRUSH = wx._gdi.GREEN_BRUSH
-wxWHITE_BRUSH = wx._gdi.WHITE_BRUSH
-wxBLACK_BRUSH = wx._gdi.BLACK_BRUSH
-wxTRANSPARENT_BRUSH = wx._gdi.TRANSPARENT_BRUSH
-wxCYAN_BRUSH = wx._gdi.CYAN_BRUSH
-wxRED_BRUSH = wx._gdi.RED_BRUSH
-wxGREY_BRUSH = wx._gdi.GREY_BRUSH
-wxMEDIUM_GREY_BRUSH = wx._gdi.MEDIUM_GREY_BRUSH
-wxLIGHT_GREY_BRUSH = wx._gdi.LIGHT_GREY_BRUSH
-wxBLACK = wx._gdi.BLACK
-wxWHITE = wx._gdi.WHITE
-wxRED = wx._gdi.RED
-wxBLUE = wx._gdi.BLUE
-wxGREEN = wx._gdi.GREEN
-wxCYAN = wx._gdi.CYAN
-wxLIGHT_GREY = wx._gdi.LIGHT_GREY
-wxSTANDARD_CURSOR = wx._gdi.STANDARD_CURSOR
-wxHOURGLASS_CURSOR = wx._gdi.HOURGLASS_CURSOR
-wxCROSS_CURSOR = wx._gdi.CROSS_CURSOR
-wxTheFontList = wx._gdi.wxTheFontList
-wxTheBrushList = wx._gdi.wxTheBrushList
-wxTheColourDatabase = wx._gdi.wxTheColourDatabase
+## wxNORMAL_FONT = wx._gdi.NORMAL_FONT
+## wxSMALL_FONT = wx._gdi.SMALL_FONT
+## wxITALIC_FONT = wx._gdi.ITALIC_FONT
+## wxSWISS_FONT = wx._gdi.SWISS_FONT
+## wxRED_PEN = wx._gdi.RED_PEN
+## wxCYAN_PEN = wx._gdi.CYAN_PEN
+## wxGREEN_PEN = wx._gdi.GREEN_PEN
+## wxBLACK_PEN = wx._gdi.BLACK_PEN
+## wxWHITE_PEN = wx._gdi.WHITE_PEN
+## wxTRANSPARENT_PEN = wx._gdi.TRANSPARENT_PEN
+## wxBLACK_DASHED_PEN = wx._gdi.BLACK_DASHED_PEN
+## wxGREY_PEN = wx._gdi.GREY_PEN
+## wxMEDIUM_GREY_PEN = wx._gdi.MEDIUM_GREY_PEN
+## wxLIGHT_GREY_PEN = wx._gdi.LIGHT_GREY_PEN
+## wxBLUE_BRUSH = wx._gdi.BLUE_BRUSH
+## wxGREEN_BRUSH = wx._gdi.GREEN_BRUSH
+## wxWHITE_BRUSH = wx._gdi.WHITE_BRUSH
+## wxBLACK_BRUSH = wx._gdi.BLACK_BRUSH
+## wxTRANSPARENT_BRUSH = wx._gdi.TRANSPARENT_BRUSH
+## wxCYAN_BRUSH = wx._gdi.CYAN_BRUSH
+## wxRED_BRUSH = wx._gdi.RED_BRUSH
+## wxGREY_BRUSH = wx._gdi.GREY_BRUSH
+## wxMEDIUM_GREY_BRUSH = wx._gdi.MEDIUM_GREY_BRUSH
+## wxLIGHT_GREY_BRUSH = wx._gdi.LIGHT_GREY_BRUSH
+## wxBLACK = wx._gdi.BLACK
+## wxWHITE = wx._gdi.WHITE
+## wxRED = wx._gdi.RED
+## wxBLUE = wx._gdi.BLUE
+## wxGREEN = wx._gdi.GREEN
+## wxCYAN = wx._gdi.CYAN
+## wxLIGHT_GREY = wx._gdi.LIGHT_GREY
+## wxSTANDARD_CURSOR = wx._gdi.STANDARD_CURSOR
+## wxHOURGLASS_CURSOR = wx._gdi.HOURGLASS_CURSOR
+## wxCROSS_CURSOR = wx._gdi.CROSS_CURSOR
+## wxTheFontList = wx._gdi.wxTheFontList
+## wxTheBrushList = wx._gdi.wxTheBrushList
+## wxTheColourDatabase = wx._gdi.wxTheColourDatabase
 
 
